-Refactorizado para usar MailAsyncSender (ya no tiene dependencias directas de JavaMailSender ni RegistroEnvioRepository) -Nuevo método público enviarContacto(NotificacionContactoRequest req): guarda en BD y dispara correos en background -Fix: catch (MessagingException e) → catch (Exception e) en todos los bloques de envío (JavaMailSender lanza MailSendException que es RuntimeException, no MessagingException)